--- a/app/templates/components/sub_header.html
+++ b/app/templates/components/sub_header.html
@@ -4,7 +4,7 @@
             {% if option.selected == True  %}
                 <a class="selected" disabled="">{{ option.title }}</a>
             {% else %}
-                <a href="{{ url_for('posts') }}">{{ option.title }}</a>
+                <a href="{{ url_for(option.url) }}">{{ option.title }}</a>
             {% endif %}
         {% endfor %}
     </div>
