--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     {% for game in games %}
-                        {% if notice_counter != 0 %}
+                        {% if game.id != 0 %}
                             <div class="all-notices">
                                 <div class="header-all-notices">
                                     <div class="notice-category">
