--- a/app/templates/components/head.html
+++ b/app/templates/components/head.html
@@ -5,3 +5,4 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pagination.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/sub-header.css') }}">
