--- a/app/templates/admin/notices/notices.html
+++ b/app/templates/admin/notices/notices.html
@@ -2,12 +2,21 @@
 <html lang="pt-br">
     <head>
         {% include 'components/head.html' %}
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">    
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/admin_notices.css') }}">    
     </head>
     <body>
         <div class='web'>
             {% include 'components/header.html' %}
             <div class="payload">
+                <div class="notice-admin-options">
+                    <a href="">ADICIONAR UM JOGO</a>
+                    <a href="">ADICIONAR UM JOGO</a>
+                    <a href="">ADICIONAR UM JOGO</a>
+                    <a href="">ADICIONAR UM JOGO</a>
+                    <a href="">ADICIONAR UM JOGO</a>
+                    <a href="">ADICIONAR UM JOGO</a>
+                    <a href="">ADICIONAR UM JOGO</a>
+                </div>
             </div>
             {% include 'components/footer.html' %}
         </div>
