--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -58,7 +58,7 @@
                 <a class="register" href="{{ url_for('register') }}">REGISTRAR-SE</a>
             </div>
         {% endif %}
-        <a href="{{ url_for('index') }}" class="header-1part-1opc">HOME</a>
+        <a href="{{ url_for('index') }}" class="header-1part-1opc">PÁGINA INICIAL</a>
         <a href="{{ url_for('notices') }}" class="header-1part-1opc">PRINCIPAIS NOTÍCIAS</a>
         <input type="checkbox" id="mo2" class="input-second-options-mobile">
         <label for="mo2">
@@ -67,7 +67,9 @@
             <svg width="8" height="5" viewBox="0 0 8 5" class="arrow-down" fill="#ffa31a" xmlns="http://www.w3.org/2000/svg"><path d="M0.707109 1.70711L3.29289 4.29289C3.68342 4.68342 4.31658 4.68342 4.70711 4.29289L7.29289 1.70711C7.92286 1.07714 7.47669 0 6.58579 0H1.41421C0.523309 0 0.0771438 1.07714 0.707109 1.70711Z"></path></svg>
             <div class="games-options">
                 {% for game in header_games %}
-                    <a href="{{ url_for('notices_by_game', name=game.name) }}" class="game-option">{{ game.name }}</a>
+                    {% if game.id != 0 %}
+                        <a href="{{ url_for('notices_by_game', name=game.name) }}" class="game-option">{{ game.name }}</a>
+                    {% endif %}
                 {% endfor %}
             </div>
         </div>
@@ -79,7 +81,9 @@
             </div>
             <div class="options-mobile">
                 {% for game in header_games %}
-                    <a href="{{ url_for('notices_by_game', name=game.name) }}" id="mo" class="post">{{ game.name }}</a>
+                    {% if game.id != 0 %}
+                        <a href="{{ url_for('notices_by_game', name=game.name) }}" id="mo" class="post">{{ game.name }}</a>
+                    {% endif %}
                 {% endfor %}
             </div>
         </div>
