--- a/app/templates/admin/notices/notices.html
+++ b/app/templates/admin/notices/notices.html
@@ -9,8 +9,8 @@
             {% include 'components/header.html' %}
             <div class="payload">
                 <div class="notice-admin-options">
-                    <a href="">ADICIONAR UM JOGO</a>
-                    <a href="">ADICIONAR UM JOGO</a>
+                    <a href="">CONTROLE DE JOGOS</a>
+                    <a href="">CONTROLE DE NOTÍCIAS</a>
                     <a href="">ADICIONAR UM JOGO</a>
                     <a href="">ADICIONAR UM JOGO</a>
                     <a href="">ADICIONAR UM JOGO</a>
