--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -7,10 +7,10 @@
         <meta property="og:description" content="{{ notice.subtitle }}" />
         <meta property="og:image" content="{{ notice.cover_image }}" />
         <meta property="og:url" content="">
-        <meta property="twitter:title" content="{{ notice.title }}" />
-        <meta property="twitter:description" content="{{ notice.subtitle }}" />
-        <meta property="twitter:image" content="{{ notice.cover_image }}" />
-        <meta property="twitter:card" content="{{ notice.cover_image }}" />
+        <meta name="twitter:title" content="{{ notice.title }}" />
+        <meta name="twitter:description" content="{{ notice.subtitle }}" />
+        <meta name="twitter:image" content="{{ notice.cover_image }}" />
+        <meta name="twitter:card" content="{{ notice.cover_image }}" />
         {% include 'components/head.html' %}
     </head>
     <body>
