Adiciona sistema para deletar imagens

--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -125,6 +125,8 @@
         padding: 7px 16px;
         border: 0 none;
         border-radius: 0;
+        -webkit-appearance: none;
+            appearance: none;
         font-size: 20px;
     }
 }
