--- a/app/templates/posts/my_posts.html
+++ b/app/templates/posts/my_posts.html
@@ -1,2 +1,6 @@
 <div class="posts">
+    {% for post in posts %}
+        <h1>{{ post.title }}</h1>
+    {% endfor %}
+    {% include 'components/pagination.html' %}
 </div>
