Modificação de visual

--- a/app/templates/posts/posts.html
+++ b/app/templates/posts/posts.html
@@ -2,7 +2,8 @@
 <html lang="pt-br">
     <head>
         {% include 'components/head.html' %}
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/posts.css') }}">    
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/my_posts.css') }}">   
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/new_post.css') }}">    
     </head>
     <body>
         <div class='web'>
