--- a/app/templates/posts/my_posts.html
+++ b/app/templates/posts/my_posts.html
@@ -1,6 +1,17 @@
-<div class="posts">
-    {% for post in posts %}
-        <h1>{{ post.title }}</h1>
-    {% endfor %}
+<div class="myposts">
+    <h1 class="m-title">Minhas Postagens</h1>
+    <div class="my-posts">
+        {% for post in posts %}
+            <div class="body-post">
+                <img src="{{ post.cover_image }}" alt="" class="cover">
+                <h1 class="title">{{ post.title }}</h1>
+                <div class="options">
+                    <a href="{{ url_for('delete_post', id=post.id) }}" class="delete">DELETAR</a>
+                    <a href="" class="edit">EDITAR</a>
+                </div>
+                <p>{{ DatePost(post.addedAt) }}</p>
+            </div>
+        {% endfor %}
+    </div>    
     {% include 'components/pagination.html' %}
 </div>
