--- a/app/static/css/footer.css
+++ b/app/static/css/footer.css
@@ -29,8 +29,10 @@
 .footer .footer-2part a img {
     width: 30px;
     height: 30px;
-    transition: all 0.2s linear;
     opacity: 0.7;
+    -webkit-transition: all 0.2s linear;
+        -moz-transition: all 0.2s linear;
+            transition: all 0.2s linear;
 }
 
 .footer .footer-2part a img:hover {
