Remove title index

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,7 +55,7 @@
                                 <div class="header-all-notices">
                                     <div class="notice-category">
                                         <img src="{{ game.icon }}" alt="{{ game.title }}">
-                                        <h1 class="notice-category">{{ game.name }}</h1>
+                                        <!--<h1 class="notice-category">{{ game.name }}</h1>-->
                                     </div>
                                     <a href="{{ url_for('notices_by_game', name=game.name) }}" class="more-notices">Ver mais</a>
                                 </div>
