--- a/app/templates/notices/notice.html
+++ b/app/templates/notices/notice.html
@@ -23,7 +23,7 @@
                         {% if game.id != 0 %}
                             <div class="game">
                                     <img src="{{ game.icon }}" alt="{{ game.name }}">
-                                    <h2 class="game">{{ game.name }}</h2>
+                                    <!--<h2 class="game">{{ game.name }}</h2>-->
                             </div>
                         {% endif %}
                         <span class="posted-by">{{ user.name + ' ' + user.surname + ' - @' +user.username}}</span>
