--- a/app/static/css/new_post.css
+++ b/app/static/css/new_post.css
@@ -94,6 +94,7 @@
     padding: 7px 16px;
     background: #ffa31a;
     border: none;
+    border-radius: 3px;
     font-size: 15px;
     color: #FFFFFF;
     margin: 30px auto 0 auto;
