--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -1,14 +1,15 @@
 <div class="header">
-    <div class="loader">
+    <!--<div class="loader">
         <div class="loader-figure">
         </div>
+        <span>CARREGANDO</span>
         <script>
             window.addEventListener('load', () => {
                 const loader = document.querySelector('.loader');
                 loader.className += ' hidden';
             });
         </script>
-    </div>
+    </div>-->
     <input type="checkbox" id="options1" onchange="dockCloser()">
     <label for="options1"><div class="background-options"></div></label>
     <div class="header-mobile">
