--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -31,6 +31,7 @@
     position: fixed;
     display: flex;
     background-color: #000000;
+    opacity: 0.7;
     width: 100%;
     height: 100%;
     top: 0;
