Muda rotas para portugues

--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -9,6 +9,11 @@ body {
     background: green;
 }
 
+.web {
+    width: 100vw;
+    height: 100vh;
+}
+
 html, body, .web, .payload {
     background: #FFFFFF;
     -webkit-transition: all 0.1s linear;
