--- a/app/static/css/main_page.css
+++ b/app/static/css/main_page.css
@@ -36,7 +36,7 @@
     display: flex;
     overflow: hidden;
     min-width: 100%;
-    margin-left: 48px;
+    margin-left: 4.5%;
 }
 
 .notice-itens a .notice-1 .icon {
