--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -124,7 +124,7 @@
             {% else %}
                 <div class="auth">
                     <a href="{{ url_for('login') }}" class="signin">ENTRAR</a>
-                    <a href="{{ url_for('register') }}" class="signup">CADASTRAR</a>
+                    <a href="{{ url_for('register') }}" class="signup">REGISTRAR-SE</a>
                 </div>
             {% endif %}
         </div>
