--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -124,6 +124,7 @@
 
 .header .header-1part .header-1part-1opc:hover {
     color: #ffa31a;
+    opacity: 0.9;
 }
 
 .header .header-1part .header-1part-2opc .option-title {
@@ -211,6 +212,7 @@
     height: 60px;
     width: 100%;
     background: #111111;
+    align-items: center;
 }
 
 .web .header .header-2part .logo {
@@ -355,51 +357,48 @@
 
 .user .user-name .user-options a:hover {
     background: #333333;
-    border-bottom: 1px solid #ffa31a;
 }
 
 .header .header-2part .auth {
-    width: 250px;
-    height: 100%;
+    display: flex;
+    width: max-content;
+    height: min-content;
+    align-items: center;
+    align-self: center;
+    margin-right: 50px;
 }
 
 .header .header-2part .auth a {
-    position: relative;
-    top: 20px;
     text-decoration: none;
-    height: fit-content;
     user-select: none;
-    -webkit-transition: all 0.2s linear;
-        -moz-transition: all 0.2s linear;
-            transition: all 0.2s linear;
+    height: min-content;
+    padding: 5px 10px;
+    font-size: 13px;
+    font-weight: 500;
+    border-radius: 5px;
+    -webkit-transition: all 0.1s linear;
+        -moz-transition: all 0.1s linear;
+            transition: all 0.1s linear;
 }
 
 .header .header-2part .auth .signin {
-    height: fit-content;
-    padding: 9px 14px;
-    font-size: 15px;
-    font-weight: 400;
     color: #FFFFFF;
-    border: 1px solid #1B1B1B;
-    border-radius: 5px;
+    border: 2px solid #FFFFFF;
 }
 
 .header .header-2part .auth .signin:hover {
-    border: 1px solid #FFFFFF;
+    opacity: 0.7;
 }
 
 .header .header-2part .auth .signup {
-    top: 20px;
-    height: fit-content;
-    padding: 10px 15px;
-    background: #ffa31a;
-    border-radius: 5px;
-    font-size: 15px;
-    color: #FFFFFF;
+    border: 2px solid #ffa31a;
+    color: #ffa31a;
+    margin-left: 10px;
 }
 
 .header .header-2part .auth .signup:hover {
-    box-shadow: 0 0 15px #ffa31a;
+    background-color: #ffa31a;
+    color: #000000;
 }
 
 .second-options-mobile {
@@ -506,12 +505,11 @@
     }
 
     .header .header-1part #header-login {
-        display: inline-block;
+        display: flex;
         background: #111111;
         justify-content: space-between;
         align-items: center;
-        width: 91%;
-        font-size: 22px;
+        width: fit-content;
         border-bottom: 1px solid  #212121;
     }
 
@@ -521,20 +519,26 @@
 
     .header .header-1part #header-login a {
         text-decoration: none;
-        color: #FFFFFF;
-        width: max-content;
-        padding: 14px 2%;
-        border: 1px solid #212121;
-        border-radius: 10px;
+        user-select: none;
+        height: min-content;
+        padding: 5px 10px;
+        font-size: 13px;
+        font-weight: 500;
+        border-radius: 5px;
+        -webkit-transition: all 0.1s linear;
+            -moz-transition: all 0.1s linear;
+                transition: all 0.1s linear;
     }
 
     .header .header-1part #header-login .login {
-        font-size: 15px;
+        color: #FFFFFF;
+        border: 2px solid #FFFFFF;
+        margin-right: 10px;
     }
 
     .header .header-1part #header-login .register {
-        background: #ffa31a;
-        font-size: 15px;
+        color: #ffa31a;
+        border: 2px solid #ffa31a;
     }
 
     .header-1part .header-1part-top {
