--- a/app/static/css/notice.css
+++ b/app/static/css/notice.css
@@ -10,7 +10,7 @@
     width: 45%;
     margin: 20px auto;
     min-width: 700px;
-    border-bottom: 2px solid #827189;
+    border-bottom: 2px solid #EBE8EC;
     padding-bottom: 20px;
     margin-bottom: 20px;
 }
@@ -37,7 +37,7 @@
 }
 
 .payload .notice .notice-header {
-    border-bottom: 1px solid #827189;
+    border-bottom: 1px solid #EBE8EC;
     margin-bottom: 20px;
     height: max-content;
 }
