--- a/app/static/css/notices.css
+++ b/app/static/css/notices.css
@@ -14,7 +14,7 @@
     display: flex;
     position: relative;
     margin: 20px auto 50px auto;
-    border-bottom: 1px solid #827189;
+    border-bottom: 1px solid #EBE8EC;
     width: max-content;
     padding: 7px 14px;
     border-radius: 5px;
@@ -34,7 +34,7 @@
     margin: 20px auto;
     display: flex;
     padding: 0 20px 20px 20px;
-    border-bottom: 1px solid #827189;
+    border-bottom: 1px solid #EBE8EC;
 }
 
 .web .payload .notice .cover_image {
