--- a/app/templates/components/head.html
+++ b/app/templates/components/head.html
@@ -7,3 +7,4 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pagination.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/sub-header.css') }}">
+<script data-ad-client="ca-pub-1284323428666859" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
