--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,9 @@
 <html lang="pt-br">
     <head>
         {% include 'components/head.html' %}
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/main_page.css') }}">    
+        <meta property="og:description" content="Maior site de notícias para Gamer de verdade." />
+        <meta name="twitter:description" content="Maior site de notícias para Gamer de verdade." />   
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main_page.css') }}"> 
     </head>
     <body>
         <div class='web'>
