--- a/app/templates/components/header.html
+++ b/app/templates/components/header.html
@@ -14,12 +14,12 @@
     <label for="options1"><div class="background-options"></div></label>
     <div class="header-mobile">
         <div class="search"></div>
-        <div class="logo">+ GAMER</div>
+        <img src="{{ url_for('static', filename='logo.png') }}" alt="Mais Gamer" class="logo">
         <label for="options1" class="options"><svg width="35" height="35" class="options-button" viewBox="0 0 32 32"><circle opacity=".07" cx="16" cy="16" r="16" fill="#FFFFFF"></circle><path fill="#C7C7C7" d="M22 10v2H10v-2zM22 15v2H10v-2zM22 20v2H10v-2z"></path></svg></label>
     </div>
     <div class="header-1part">
         <div class="header-1part-top">
-            <h1 class="logo">+ GAMER</h1>
+            <img src="{{ url_for('static', filename='favicon_2.png') }}" alt="Mais Gamer - Logo" class="Favicon">
             <label for="options1"><svg width="35" height="35" class="" viewBox="0 0 32 32"><circle opacity=".07" cx="16" cy="16" r="16" fill="#FFFFFF"></circle><g stroke="#C7C7C7" stroke-width="2"><path d="M12.007 11.973l8.132 8.132M11.993 20.093l8.131-8.132"></path></g></svg></label>
         </div>
         {% if current_user.is_authenticated %}
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div class="header-2part">
-        <h1 class="logo">+ GAMER</h1>
+        <img src="{{ url_for('static', filename='logo.png') }}" alt="Mais Gamer" class="logo">
         <div class="search" style="display: none;">
             <form class="tsf nj" action="/search" data-submitfalse="q" id="tsf" method="GET" name="f" role="search">
                 <input name="q" type="search" class="search-input" placeholder="Buscar"/>
