--- a/app/templates/components/footer.html
+++ b/app/templates/components/footer.html
@@ -18,6 +18,6 @@
                 <img src="{{ url_for('static', filename='/images/Reddit.svg') }}"/>
             </a>
         </div>
-        <p class="site-name">©maisgamer.com 2020</p>
+        <div class="site-name">©maisgamer.com 2020</div>
     </div>
 </div>
